# scoreboard

./: .gitignore  Cargo.toml  example.config.toml
scoreboard-templates/: Cargo.toml
src/: main.rs
src/handler/: mod.rs
src/models/: mod.rs
src/server/: mod.rs
